--- a/.github/workflows/daily-weather.yml
+++ b/.github/workflows/daily-weather.yml
@@ -1,52 +1,59 @@
-name: Daily Weather Report
+name: Send Weather Email
 
 on:
   schedule:
-    # Run daily at 8:00 AM UTC (adjust timezone as needed)
-    - cron: '0 8 * * *'
-  workflow_dispatch: # Allow manual triggering
+    # Runs every day at 07:10 London time (cron is UTC, London is usually UTC±0/±1)
+    - cron: '10 6 * * *'
+  workflow_dispatch: {}
 
 jobs:
-  weather-report:
+  run:
     runs-on: ubuntu-latest
-    
+    env:
+      # Ensure your script uses London localtime for "yesterday", etc.
+      TZ: Europe/London
+
+      # ——— Required by your script (set these as GitHub repo Secrets) ———
+      ECOWITT_API_KEY: ${{ secrets.ECOWITT_API_KEY }}
+      ECOWITT_APP_KEY: ${{ secrets.ECOWITT_APP_KEY }}
+      ECOWITT_MAC: ${{ secrets.ECOWITT_MAC }}          # e.g. F0:F5:BD:8A:FA:9C
+      GMAIL_EMAIL: ${{ secrets.GMAIL_EMAIL }}          # your Gmail address
+      GMAIL_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}# Gmail app password (not your normal password)
+      RECEIVER_EMAILS: ${{ secrets.RECEIVER_EMAILS }}  # comma-separated list
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
-        
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y python3-dev python3-pip
-        
-    - name: Install Python dependencies
-      run: |
-        pip install --upgrade pip
-        pip install -r requirements.txt
-        
-    - name: Run weather processor
-      env:
-        ECOWITT_API_KEY: ${{ secrets.ECOWITT_API_KEY }}
-        ECOWITT_APP_KEY: ${{ secrets.ECOWITT_APP_KEY }}
-        ECOWITT_MAC: ${{ secrets.ECOWITT_MAC }}
-        GMAIL_EMAIL: ${{ secrets.GMAIL_EMAIL }}
-        GMAIL_PASSWORD: ${{ secrets.GMAIL_PASSWORD }}
-        RECEIVER_EMAILS: ${{ secrets.RECEIVER_EMAILS }}
-        GITHUB_ACTIONS: 'true'
-      run: |
-        python enhanced_weather_processor.py
-        
-    - name: Upload artifacts (optional - for debugging)
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: weather-data
-        path: |
-          weather_data.db
-          weather_charts/
-          weather_processor.log
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          # If you have a requirements.txt, prefer: pip install -r requirements.txt
+          pip install pandas numpy requests scipy matplotlib
+          # Optional: install the nicer windrose axes
+          pip install matplotlib-windrose || true
+
+      # —— Option A (recommended): keep your SQLite DB between runs so the windrose has real 7-day history ——
+      # Cache works best when the key changes rarely; use a stable key and restore-keys.
+      - name: Restore DB cache
+        uses: actions/cache@v4
+        with:
+          path: weather_data.db
+          key: weather-db-v1
+          restore-keys: |
+            weather-db-
+
+      - name: Run weather processor
+        run: python your_script_name.py
+
+      - name: Save updated DB back to cache (best-effort)
+        if: always()
+        uses: actions/cache/save@v4
+        with:
+          path: weather_data.db
+          key: weather-db-v1-${{ github.run_id }}  # force-save a fresh copy
