--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 requests>=2.28.0
 pandas>=1.5.0
-numpy>=1.21.0
-matplotlib>=3.5.0
-matplotlib-windrose>=1.6.0
+numpy>=1.24.0
+matplotlib>=3.6.0
+windrose>=1.9.0
 scipy>=1.9.0
